test/files/neg/classtags_contextbound_b.check
classtags_contextbound_b.scala:5: error: implicit error;
!I evidence$1: ClassTag[T]
  No ClassTag available for T

  def foo[T] = mkArray[T]
                      ^
1 error
